Deprecation: replace new Boolean(boolean) with Boolean.valueOf(boolean)